fix overflow

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ main {
 .slider {
   width: 500px;
   height: 390px;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .slider__inner {
